--- a/pyspark-custom-data-sources.ipynb
+++ b/pyspark-custom-data-sources.ipynb
@@ -366,7 +366,7 @@
    "source": [
     "จากโค้ด ใน method `read()` มีจุดให้สังเกตเพิ่มเติม 2 ส่วน\n",
     "1. ข้อมูลตัวอย่างถูกสร้างจาก lib faker ที่เราติดตั้งเมื่อก่อนหน้านี้นั่นเอง\n",
-    "2. เราจะเห็นว่า method นี้ใช้คำสั่ง `yield` ในการส่งข้อมูลกลับออกมา ซึ่งคำสั่งนี้มันจะทำการส่งค่าออกมาทีละค่า แล้ว pause ไว้ พอถูกเรียกครั้งต่อไป มันก็จะทำงานต่อจากจุดเดิม ซึ่งจะมีผลดีเมื่อเจอข้อมูลที่มันใหญ่มากๆ"
+    "2. เราจะเห็นว่า method นี้ใช้คำสั่ง `yield` ในการส่งข้อมูลกลับออกมา ซึ่งคำสั่งนี้มันจะทำการส่งค่าออกมาทีละค่า แล้ว pause ไว้ พอถูกเรียกครั้งต่อไป มันก็จะทำงานต่อจากจุดเดิม ซึ่งจะมีผลดีเมื่อเจอข้อมูลที่มันใหญ่มากๆ (อันนี้สรุปเท่าที่เข้าใจในแง่ของ python จะมีกล่าวถึงเพิ่มเติมในตัวอย่างหลังๆ)"
    ]
   },
   {
@@ -834,7 +834,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "6790acd8-8475-4beb-ba40-b415681bdcdd",
      "showTitle": false,
@@ -863,6 +866,29 @@
    },
    "source": [
     "## Step 1: Define the example DataSource"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "5b68a16d-8373-48e1-92d7-ee70b8eeecf3",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "ขั้นแรก : Define Class หลักสำหรับแหล่งข้อมูลขึ้นมา โดยจะมี 4 ส่วนใน Class คือ\n",
+    "- name : ชื่อที่จะใช้ตอนเราเอามาใช้กับ spark\n",
+    "- schema : โครงสร้างข้อมูล ว่ามี column อะไรบ้าง, data type เป็นยังไง\n",
+    "- streamReader : อ่านข้อมูลแบบ Streaming\n",
+    "- streamWriter : เขียนข้อมูลแบบ Streaming"
    ]
   },
   {
@@ -937,6 +963,28 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
+     "nuid": "5156c613-0954-439b-bccd-3429c6e4bfc0",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "จาก step แรก จะมีส่วนของ comment ที่บอกว่า\n",
+    "> If you don't need partitioning, you can implement the `simpleStreamReader` method instead of `streamReader`.\n",
+    "\n",
+    "ซึ่งจะเกี่ยวกับประเภทข้อมูลที่เราจะอ่านด้วย ดังนั้น ใน step นี้จะมีตัวอย่างของทั้ง 2 แบบ"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
      "nuid": "5f878908-bb3f-4933-8858-f8061f6ff153",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -945,6 +993,34 @@
    },
    "source": [
     "### DataSourceStreamReader implementation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "836f43f7-f89f-4132-b743-65003d04cc03",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "ในส่วนของตัวอย่างนี้ จะเหมาะกับข้อมูลที่มีขนาดใหญ่ มีการแบ่ง partition ในการอ่านข้อมูล และมีการรับ partition เป็น input โดยจะแบ่งออกเป็น 2 part คือ\n",
+    "1. RangePartition ส่วนแบ่งงาน ซึ่งจะช่วยอำนวยความสะดวกให้ executor หลายตัวช่วยกันอ่านกรณีข้อมูลมีจำนวนมาก\n",
+    "2. FakeStreamReader ส่วนอ่านข้อมูล จะมีรายละเอียดปลีกย่อยในแต่ละ method เพิ่มเติม ดังนี้\n",
+    "- `initialOffset` จุดเริ่มต้นของ stream , เป็น dict โดยเริ่มจาก 0\n",
+    "- `latestOffset` จุดล่าสุดของข้อมูล จะเรียกทุกครั้งที่มีการ trigger ซึ่งจะบอกว่าข้อมูลล่าสุดถึงไหนแล้ว โดยในตัวอย่างนี้ จะเป็นการจำลองว่า ข้อมูลที่เข้ามาใหม่เพิ่มขึ้นทีละ 2 หน่วย นั่นแปลว่า offset ใหม่ก็จะเพิ่มขึ้นไปเรื่อยๆ\n",
+    "- `partitions` วางแผนกระจายงาน โดยรับค่า start offset, end offset และคืนค่าออกมาเป็น**ลำดับ**ของ `InputPartition` แต่ในกรณีเฉพาะตัวอย่างนี้ จะเป็นการคืนค่าออกมาเพียง `InputPartition` เดียว สังเกตจากลำดับที่มีเพียงลำดับเดียว\n",
+    "- `commit` แจ้งสถานะว่าสำเร็จ, clean up resources\n",
+    "- `read` ขั้นนี้คือตัวที่อ่านข้อมูลจริง โดยจะรับ partition ที่เข้ามาจากขั้นตอน partitions ก่อนหน้านี้ และส่ง record กลับไปแบบ Iterator ซึ่งภายใน Iterator จะเป็น tuple โดยแต่ละ tuple = 1 row \n",
+    "> สังเกตได้ว่า ในขั้นนี้ เราไม่ได้ใช้ return แต่ใช้ `yield` ซึ่งคุณสมบัติของ yield จะเป็นดังตัวอย่างแรกๆที่เราเคยกล่าวไปในเชิงของ python พอกล่าวมาถึงจุดนี้ จะมีส่วนที่เรียกว่า `Iterator` แล้ว\n",
+    "> - ดังนั้น `yield` จะใช้ในการคืนข้อมูลออกมาเป็น Iterator ซึ่ง executor สามารถอ่านและส่ง record ออกมาทีละ row โดยไม่ต้อง load ข้อมูลทั้งหมดของ partition ขึ้นมาใน memory พร้อมกัน จึงเหมาะกับข้อมูลที่มีขนาดใหญ่มากๆ"
    ]
   },
   {
@@ -970,14 +1046,16 @@
     "import os\n",
     "import json\n",
     "\n",
+    "# 1 ส่วนแบ่งงาน\n",
     "class RangePartition(InputPartition):\n",
     "    def __init__(self, start, end):\n",
     "        self.start = start\n",
     "        self.end = end\n",
     "\n",
+    "# 2 ส่วนอ่านข้อมูล\n",
     "class FakeStreamReader(DataSourceStreamReader):\n",
     "    def __init__(self, schema, options):\n",
-    "        self.current = 0\n",
+    "        self.current = 0 # offset ปัจจุบัน\n",
     "\n",
     "    def initialOffset(self) -> dict:\n",
     "        \"\"\"\n",
@@ -1032,6 +1110,31 @@
    },
    "source": [
     "### SimpleDataSourceStreamReader implementation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "bbeb90c0-be47-4bab-9b62-f908758fb566",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "ในส่วนของตัวอย่างนี้ จะเหมาะกับข้อมูลที่ไม่ได้มีขนาดใหญ่มาก เพราะ**ไม่ได้มีการแบ่ง** partition ในการอ่านข้อมูล\n",
+    "\n",
+    "โดยจะมี method ภายใน ดังนี้\n",
+    "- `initialOffset` กำหนดจุดเริ่มต้น\n",
+    "- `read` รับค่า start offset เข้ามา แล้วคืนค่า Iterator, จุด start offset ถัดไป โดยในตัวอย่างคือการอ่านข้อมูลเพิ่ม 2 แถวจากจุดที่ start และคำนวณ start offset ถัดไป\n",
+    "- `readBetweenOffsets` ส่วนนี้มีไว้ในกรณีที่เกิด failed ซึ่งจะรับ offset ทั้ง start และ end แล้วอ่านข้อมูลตรง offset ช่วงนั้น\n",
+    "- `commit` หน้าที่แบบเดียวกันกับตัวอย่างก่อนหน้า"
    ]
   },
   {
@@ -1100,6 +1203,39 @@
    },
    "source": [
     "## Step 3: Implement the stream writer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "93bff9b2-d9f1-4dae-afdb-df6fb8a26f60",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "มาสู่ขั้นตอนของการเขียนกันบ้าง ในส่วนนี้มี 2 class คือ\n",
+    "1. SimpleCommitMessage\n",
+    "2. FakeStreamWriter\n",
+    "\n",
+    "---\n",
+    "**SimpleCommitMessage**\n",
+    "- คลาสนี้ไว้ใช้สำหรับการรายงานผลจาก executor\n",
+    "\n",
+    "---\n",
+    "**FakeStreamWriter**\n",
+    "\n",
+    "- คลาสนี้ไว้ใช้สำหรับการเขียนหลักๆ มี method 3 ส่วน คือ\n",
+    "    - `write` : ทำงานบน executor ซึ่งจะรับข้อมูลจริงมาประมวลผล และข้อมูลที่รับมาจะเป็น iterator หลังจากเขียนเสร็จก็จะมี commit message กลับมา\n",
+    "    - `commit` : รับ commit message จากทุก executor ที่ทำงานสำเร็จ จนครบ แล้วตัดสินใจว่าจะทำอะไรกับมันต่อไป ซึ่งในที่นี้ เราเขียน metadata ของแต่ละ micro-batch (จำนวนแถว และ จำนวน partition) ลงใน json file\n",
+    "    - `abort` : ในกรณีที่มีจุดที่เขียนไม่ได้บางส่วน จะเรียกใช้ตัวนี้แทน commit และรับ commit message จากส่วนที่สำเร็จมาด้วย จากนั้นก็ตัดสินใจต่อว่าจะทำอะไรกับมันต่อไป ซึ่งในกรณีของตัวอย่างนี้ เราจะเขียนข้อความการ fail ลงใน textfile"
    ]
   },
   {
@@ -1198,7 +1334,7 @@
     }
    },
    "source": [
-    "เดิมตาม docs จะเป็นโค้ดตามด้านล่าง แต่ cluster แบบฟรีที่เราใช้ไม่ support micro-batch trigger สำหรับการ streaming ซึ่ง databricks แนะนำให้ใช้ `availableNow` หรือ `once` แทน"
+    "เดิมตาม docs จะเป็นโค้ดตามด้านล่าง แต่ในส่วนของ query นั้น เนื่องด้วย cluster แบบฟรีที่เราใช้ไม่ support micro-batch trigger สำหรับการ streaming ซึ่ง databricks แนะนำให้ใช้ `availableNow` หรือ `once` แทน และยังรวมไปถึงเรื่องการใช้ python กับ sink ที่ตัวฟรีอย่างเราไม่ support เช่นกัน"
    ]
   },
   {
@@ -1219,8 +1355,34 @@
    },
    "outputs": [],
    "source": [
-    "# spark.dataSource.register(FakeStreamDataSource)\n",
+    "spark.dataSource.register(FakeStreamDataSource)\n",
     "# query = spark.readStream.format(\"fakestream\").load().writeStream.format(\"fake\").start(\"/output_path\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "2c16890a-6f54-4af5-9ff3-fdb777dd1ff9",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "ดังนั้น การแก้ไขปัญหา(เฉพาะหน้า) จากสิ่งที่เกิดขึ้น จึงต้องแก้ปัญหาด้วยการสร้าง folder ใหม่ในทุกครั้งที่เราจะ(ลอง)รันสิ่งนี้แทน โดยการใช้ uuid เข้ามาช่วย\n",
+    "\n",
+    "!! trigger = once ไม่ใช่ batch !!\n",
+    "> trigger = once เป็น 1 ใน streaming query เช่นกัน\n",
+    "\n",
+    "และในการทำงานแบบ streaming นั้น **ต้องมี** checkpoint เสมอ เพื่อใช้ในการ recovery (แต่ตัวฟรีของเราไม่รองรับ T-T)\n",
+    "\n",
+    "นี่เป็นสาเหตุที่เราต้องแก้ไขเฉพาะหน้าด้วยวิธีข้างต้น เบื้องต้นตัวอย่างนี้จึงเกิดขึ้นเพื่อให้เข้าใจว่าถ้าจะ custom data sources แบบ streaming ควรจะเป็นประมาณไหน นั่นเองค่ะ"
    ]
   },
   {
@@ -1244,20 +1406,41 @@
     "import uuid\n",
     "\n",
     "checkpoint = f\"/Volumes/workspace/default/tutorial/_checkpoint/{uuid.uuid4()}\"\n",
+    "# สร้าง path ของ checkpoint เพื่อไม่ให้ซ้ำ จะใช้ uuid มาช่วยสร้าง folder\n",
     "\n",
     "query = (\n",
     "    spark.readStream\n",
-    "        .format(\"fakestream\")\n",
+    "        .format(\"fakestream\") # เรียกใช้ data source ที่เราสร้างมา\n",
     "        .load()\n",
-    "        .writeStream\n",
-    "        .format(\"memory\")\n",
-    "        .queryName(\"test_stream\")\n",
-    "        .option(\"checkpointLocation\", checkpoint)\n",
-    "        .trigger(once=True)\n",
+    "        .writeStream # เริ่มเขียน\n",
+    "        .format(\"memory\") # เขียนลง memory แทน\n",
+    "        .queryName(\"test_stream\") # ตั้งชื่อตารางปลายทาง\n",
+    "        .option(\"checkpointLocation\", checkpoint) # ต้องมี checkpoint เสมอ โดยเราระบุ path ของ checkpoint ตาม path ข้างบน\n",
+    "        .trigger(once=True) # รันรอบเดียวหยุด\n",
     "        .start()\n",
     ")\n",
     "\n",
+    "# รอประมวลผลให้เสร็จ\n",
     "query.awaitTermination()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "4cb624bd-287f-40c3-9d34-a33a7bb5a1d3",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "และเพื่อที่เราจะดูว่าหน้าตาข้อมูลตัวอย่างเป็นเช่นไร คำตอบคือ ด้านล่างนี้ เราใช้ SQL มาช่วยในการ query ออกมาดู"
    ]
   },
   {
