huge update, but not final
waitin for Thai (ver) docs, 😭🥹🙏🙇‍♀️ (big ขอโทษ ka)

--- a/pandas-to-pandas-api-on-spark-in-10-minutes.ipynb
+++ b/pandas-to-pandas-api-on-spark-in-10-minutes.ipynb
@@ -35,8 +35,8 @@
     }
    },
    "source": [
-    "- This sample notebook from : [Pandas API on Spark](https://docs.databricks.com/aws/en/pandas/pandas-on-spark)\n",
-    "Thank you ka"
+    "- **Disclaimer** : This sample notebook from [Pandas API on Spark](https://docs.databricks.com/aws/en/pandas/pandas-on-spark)\n",
+    "อาจมีการปรับปรุงเปลี่ยนแปลงเล็กน้อยให้เข้ากับ free edition ในปัจจุบัน และอธิบายภาษาไทยตามความเข้าใจค่ะ Thank you ka"
    ]
   },
   {
