--- a/08_ss/ss.ipynb
+++ b/08_ss/ss.ipynb
@@ -993,7 +993,7 @@
    "source": [
     "## Stream-Stream joins\n",
     "\n",
-    "จะอยู่ในอีก [Notebook](url)"
+    "จะอยู่ในอีก [Notebook](https://github.com/im1braincell/DataBricks-Tutorial/blob/main/08_ss/stream-stream-joins-python.ipynb)"
    ]
   }
  ],
