--- a/08_ss/stream-stream-joins-python.ipynb
+++ b/08_ss/stream-stream-joins-python.ipynb
@@ -202,7 +202,7 @@
     }
    },
    "source": [
-    "> ถ้าไม่เห็นข้อมูลส่วนนี้ออกมา ไม่ต้องตกใจ มาจาก logic ข้างบน (เพราะตอนแรกผู้ทดลองตกใจไปแล้วค่ะ555) \n",
+    "> ถ้าไม่เห็นข้อมูลจากโค้ดข้างล่างนี้ออกมา ไม่ต้องตกใจ มาจาก logic ข้างบน (เพราะตอนแรกผู้ทดลองตกใจไปแล้วค่ะ555) \n",
     "\n",
     "logic คือ\n",
     "- เราใช้เงื่อนไขตรง where ว่า `(rand() * 100).cast(\"integer\") < 10` คือการสุ่มเลขมา และเลขที่สุ่มมาต้องน้อยกว่า 10 ด้วย ดังนั้นการสุ่มแบบนี้ก็เป็นเหมือนสุ่มกาชาหาเลขที่น้อยกว่า 10 เพื่อจะบอกว่าจะเก็บข้อมูลแต่ละแถวมั้ย ถ้าในแถวนั้นถูกสุ่มเลขมาแล้วเลขที่ได้มีค่าตั้งแต่ 10 ขึ้นไป = ทิ้งแถวนั้นไป (เหมือนที่เขาระบุใน cell ไว้ประมาณว่า จากทุก 100 impressions จะมีประมาณ 10 ที่นำไปสู่การ click ซึ่งก็สร้างสถานการณ์ให้มีความใกล้เคียงความเป็นจริง)\n",
@@ -501,7 +501,7 @@
    "source": [
     "We are getting the similar results as the previous simple join query. However, if you look at the query metrics now, you will find that after about a couple of minutes of running the query, the size of the state will stabilize as the old buffered events will start getting cleared up.\n",
     "\n",
-    "> เราอาจจะเห็นว่ามันได้ผลลัพธ์แบบเดียวกันกับการ join แรกที่เราลองไป แต่ว่าถ้าไปดู detail เพิ่มเติมของ query เราจะเห็นว่าขนาดของ state ค่อนข้างจะคงที่ เพราะว่ามีการเคลียร์เหตุการณ์เก่าๆถูก clear"
+    "> เราอาจจะเห็นว่ามันได้ผลลัพธ์แบบเดียวกันกับการ join แรกที่เราลองไป แต่ว่าถ้าไปดู detail เพิ่มเติมของ query เราจะเห็นว่าขนาดของ state ค่อนข้างจะคงที่ เพราะว่าเหตุการณ์เก่าๆถูก clear"
    ]
   },
   {
