--- a/06_ldp/batch_pipeline/explorations/explore.ipynb
+++ b/06_ldp/batch_pipeline/explorations/explore.ipynb
@@ -60,6 +60,7 @@
    },
    "outputs": [],
    "source": [
+"-- อันนี้ทดลองดึงข้อมูลอื่นที่ไม่เกี่ยวข้องมาดูเฉยๆ ไม่มีความเกี่ยวข้องกับ explore ชุดนี้ค่ะ\n",
     "SELECT * from samples.wanderbricks.users"
    ]
   },
